Add preconstructed decks to Community
